cmake_minimum_required(VERSION 3.0.1)
project(KdTree)

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/shared-libs)

ADD_SUBDIRECTORY(src/kdtree)

ADD_EXECUTABLE(KdTree src/main.cpp)

ADD_DEPENDENCIES(KdTree kdtree)

TARGET_LINK_LIBRARIES(KdTree kdtree dl m)
